# Excel2Json

./: README.md  app-debug.apk
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/planet0104/excel2json/: ExcelToJson.java  MainActivity.java
app/src/main/jni/exceltojson/: Cargo.toml  build.cmd
app/src/main/jni/exceltojson/.cargo/: config
app/src/main/jni/exceltojson/src/: excel_to_json.rs  lib.rs
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
