[package]
name = "exceltojson"
version = "1.0.0"
authors = ["JiaYe"]
edition = "2018"

[dependencies]
#log = "0.4.8"
#android_logger = "0.8.5"
jni = { version = "0.13.1", default-features = false }
calamine = "0.15.6"
serde_json = "1.0.41"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'